--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,9 @@
           ],
           "js": ["content.js"]
         }
-      ]
+      ],
+      "background": {
+        "scripts": ["background.js"],
+        "persistent": true
+      }
   }
