--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,24 @@
 {
-    "manifest_version": 2,
-    "name": "Anchor Killer",
-    "description": "This extension clear href so you can't accidentally click and go to the other page",
-    "version": "1.0",
-      "browser_action": {
-        "default_popup": "popup.html"
-       },
-      "permissions": [
-        "activeTab"
-        ],
-      "background": {
-        "scripts": ["background.js"],
-        "persistent": true
-      }
+  "manifest_version": 2,
+  "name": "Anchor Killer",
+  "description": "This extension change href to “javaScript:void(0)”, so you can't accidentally click and go to the other page",
+  "version": "1.0",
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "img/icon16.png",
+    "32": "img/icon32.png",
+    "48": "img/icon48.png",
+    "128": "img/icon128.png"
+  },
+  "permissions": [
+    "activeTab"
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": true
   }
+}
