feat: chg name and add screenshots

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Anchor Killer",
+  "name": "Href Disabler",
   "description": "This extension change href to “javaScript:void(0)”, so you can't accidentally click and go to the other page",
   "version": "1.0",
   "browser_action": {
@@ -19,6 +19,6 @@
     "scripts": [
       "background.js"
     ],
-    "persistent": true
+    "persistent": false
   }
 }
